// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup renders 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
>
  <div
    className="sc-ewcqwX fxoGSj"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dDPqvT fdEorB"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY lefxSM"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
    <div
      className="sc-dDPqvT fvXjep"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY ilbwRQ"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-ewcqwX frxDQw"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-dDPqvT fSfGyp"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY iRCZKg"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
    <div
      className="sc-dDPqvT fPQnLB"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY fTImfc"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders RTL 1`] = `
<div
  className="sc-ewcqwX fxoGSj"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-dDPqvT fvXjep"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY ilbwRQ"
        dir="rtl"
        placeholder="Country"
        type="text"
      />
      <label
        className="sc-erijoS kPCrAG"
      />
    </div>
  </div>
  <div
    className="sc-dDPqvT fdEorB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY lefxSM"
        dir="rtl"
        placeholder="Phone"
        type="text"
      />
      <label
        className="sc-erijoS kPCrAG"
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders and allows access to DOM and values for text field 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-ewcqwX fxoGSj"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dDPqvT fdEorB"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY lefxSM"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
    <div
      className="sc-dDPqvT fvXjep"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY ilbwRQ"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
  </div>
  <span
    className="sc-bVhkf gDZLgS"
    size="xsmall"
  >
    Country: 
    Estonia
  </span>
  <span
    className="sc-bVhkf gDZLgS"
    size="xsmall"
  >
    Phone: 
    +372 45678901
  </span>
</div>
`;

exports[`TextInputGroup renders and allows event listeners for the select fields 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-iDmqZj kBKTkL"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-egwRra foaCDN"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-10-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-b5xmou-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-px9mr7-ValueContainer"
          >
            <div
              className="sc-bFBiFA eGHgFI"
            />
            <div
              className="sc-iSaLEN EVUIN"
            >
              <div
                className=" css-1rtvqhl-placeholder"
                id="react-select-10-placeholder"
              >
                <div
                  className="sc-hITdmI lnqjiU"
                >
                  Country
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-10-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-10-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-jyEbFP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-gcqInJ hzjOdl"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-11-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-x13ut4-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-px9mr7-ValueContainer"
          >
            <div
              className="sc-bFBiFA eGHgFI"
            />
            <div
              className="sc-iSaLEN EVUIN"
            >
              <div
                className=" css-1rtvqhl-placeholder"
                id="react-select-11-placeholder"
              >
                <div
                  className="sc-hITdmI lnqjiU"
                >
                  Vehicle
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-11-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-11-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-jyEbFP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="sc-bVhkf gDZLgS"
    size="xsmall"
  >
    Country: 
  </span>
  <span
    className="sc-bVhkf gDZLgS"
    size="xsmall"
  >
    Vehicle: 
  </span>
</div>
`;

exports[`TextInputGroup renders different types 1`] = `
<div
  className="sc-ewcqwX fxoGSj"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-dDPqvT fdEorB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY lefxSM"
        dir="ltr"
        placeholder="Email"
        type="email"
      />
      <label
        className="sc-erijoS htSbIl"
      />
    </div>
  </div>
  <div
    className="sc-dDPqvT fvXjep"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY dyWHfE"
        dir="ltr"
        placeholder="Password"
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders multi select 1`] = `
<div
  className="sc-iDmqZj kBKTkL"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-egwRra foaCDN"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          >
            xLarge
          </div>
          <div
            className="sc-kzjlfA grAoWp"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-4-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-4-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gcqInJ hzjOdl"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          >
            xLarge
          </div>
          <div
            className="sc-kzjlfA grAoWp"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-5-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-5-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select 1`] = `
<div
  className="sc-iDmqZj kBKTkL"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-egwRra foaCDN"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          />
          <div
            className="sc-iSaLEN EVUIN"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-2-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-2-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gcqInJ hzjOdl"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          />
          <div
            className="sc-iSaLEN EVUIN"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-3-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-3-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select RTL 1`] = `
<div
  className="sc-iDmqZj kBKTkL"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-egwRra foaCDN"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          />
          <div
            className="sc-iSaLEN EVUIN"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-8-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-8-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-8-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gcqInJ hzjOdl"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          >
            xLarge
          </div>
          <div
            className="sc-iSaLEN EVUIN"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-9-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-9-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-9-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select vertical 1`] = `
<div
  className="sc-iDmqZj hQbXIY"
  dir="ltr"
  orientation="vertical"
>
  <div
    className="sc-egwRra foaCDN"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-1rambzq-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          >
            xLarge
          </div>
          <div
            className="sc-iSaLEN EVUIN"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-6-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-6-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gcqInJ hzjOdl"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-xt06d1-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-bFBiFA eGHgFI"
          >
            xLarge
          </div>
          <div
            className="sc-iSaLEN EVUIN"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-7-placeholder"
            >
              <div
                className="sc-hITdmI lnqjiU"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-7-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-7-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-jyEbFP"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders sizes 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-ewcqwX hXGQrS"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dDPqvT fdEorB"
    >
      <input
        className="sc-eZceyY kVGqqI"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-dDPqvT fvXjep"
    >
      <input
        className="sc-eZceyY eZxfwA"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-ewcqwX hXGQrS"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dDPqvT fdEorB"
    >
      <input
        className="sc-eZceyY bHiiRH"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-dDPqvT fvXjep"
    >
      <input
        className="sc-eZceyY dymAmn"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-ewcqwX fxoGSj"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dDPqvT fdEorB"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY lefxSM"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
    <div
      className="sc-dDPqvT fvXjep"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY ilbwRQ"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders vertical 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-ewcqwX cOvdkF"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-dDPqvT fSfGyp"
    >
      <input
        className="sc-eZceyY fIJvU"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-dDPqvT fPQnLB"
    >
      <input
        className="sc-eZceyY fdGrU"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-ewcqwX frxDQw"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-dDPqvT fSfGyp"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY iRCZKg"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
    <div
      className="sc-dDPqvT fPQnLB"
    >
      <div
        className="sc-hixjlP huoRxK"
      >
        <input
          className="sc-eZceyY fTImfc"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-erijoS htSbIl"
        />
      </div>
    </div>
  </div>
</div>
`;
